--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: compsket
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
-Date: 2022-04-22
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
-RoxygenNote: 7.1.2
+Title: Two-sample testing of regression coefficients via complementary sketching
+Version: 1.01
+Date: 2022-05-07
+Authors@R: c(person("Fengnan", "Gao", email = "fngao@fudan.edu.cn",
+                  role = c("aut", "cre")),
+            person("Tengyao", "Wang", email="t.wang59@lse.ac.uk", role=c("aut", "cre")))
+Imports: glmnet
+Description: Two-sample testing of high-dimensional linear regression coefficients
+License: GPL-3
+RoxygenNote: 7.1.1
+Encoding: UTF-8
